force-app/main/default/objects/OneCRM__Trigger__mdt/OneCRM__Trigger__mdt.object-meta.xml
<CustomObject>
    <label>Trigger</label>
    <pluralLabel>Triggers</pluralLabel>
</CustomObject>