force-app/main/default/objects/OneCRM__Trigger__mdt/fields/OneCRM__Full_Relationship__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Full_Relationship__c</fullName>
    <label>Full Relationship</label>
    <length>200</length>
    <type>Text</type>
</CustomField>