force-app/main/default/objects/OneCRM__Trigger__mdt/fields/OneCRM__Lookup_Rollup_Summary__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Lookup_Rollup_Summary__c</fullName>
    <label>Lookup Rollup Summary</label>
    <referenceTo>OneCRM__LookupRollupSummary2__mdt</referenceTo>
    <relationshipLabel>Triggers</relationshipLabel>
    <relationshipName>Triggers</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>