force-app/main/default/objects/OneCRM__Trigger__mdt/fields/OneCRM__Next_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Next_Object_Name__c</fullName>
    <label>Next Object Name</label>
    <length>90</length>
    <type>Text</type>
</CustomField>