force-app/main/default/objects/OneCRM__Trigger__mdt/fields/OneCRM__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__ObjectName__c</fullName>
    <label>ObjectName</label>
    <length>90</length>
    <type>Text</type>
</CustomField>