force-app/main/default/objects/OneCRM__Trigger__mdt/fields/OneCRM__Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Relationship_Field__c</fullName>
    <label>Relationship_Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>