force-app/main/default/objects/OneCRM__Trigger__mdt/fields/OneCRM__rollup_Level__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__rollup_Level__c</fullName>
    <label>rollup Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>