force-app/main/default/objects/OneCRM__Trigger__mdt/fields/OneCRM__Root_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Root_Object_Name__c</fullName>
    <label>Root_Object_Name</label>
    <length>90</length>
    <type>Text</type>
</CustomField>